crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-markup@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: 3,
  align: (left, left, left,),
  table.header(table.cell(rowspan: 2)[Op], table.cell(colspan: 2, align: center)[Sens], [Court], [Long]),
  [`+`], [plus], [Addition _simple_],
  [`-`], [moins], [Voir #ref(<sec:ops>, supplement: [Section])],
)

== Les opérateurs <sec:ops>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
