crates/tmark-writers/tests/snapshots/fixtures__fence-yaml-table-settings@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: (1fr, 1fr, 1fr,),
  align: (left, right, right,),
  table.header([Category], [Q1], [Q2]),
  [Salaries], [120], [122],
  table.hline(stroke: 1pt),
  table.cell(colspan: 3)[_Totals_],
  table.hline(),
  [Total], [120], [122],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
