crates/tmark-writers/tests/snapshots/fixtures__frontmatter-epigraph@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h1>Reliability</h1>
<blockquote class="epigraph">
<p>Simplicity is prerequisite for reliability.</p>
</blockquote>
<p>Everything else follows.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
