crates/tmark-writers/tests/snapshots/fixtures__frontmatter-epigraph@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
= Reliability

#ts-epigraph(source: [Edsger W. Dijkstra])[Simplicity is prerequisite for reliability.]

Everything else follows.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
